# AIOlogy

./: CMakeLists.txt  README.md  ROADMAP.md  main.cpp
DigitRecognition/: .gitignore  CHANGELOG.md  CMakeLists.txt  DigitRecog_Loss_16b369d_2025-11-09_09_42_24.370.csv  DigitRecog_Loss_16b369d_2025-11-09_09_42_24.370.txt  DigitRecog_Loss_3347068_2025-10-29_12_29_09.717.csv  DigitRecog_Loss_3347068_2025-10-29_12_29_09.717.txt  DigitRecog_Loss_3347068_2025-10-29_14_17_33.541.csv  DigitRecog_Loss_64d8bc1_2025-10-29_14_54_04.624.csv  DigitRecog_Loss_64d8bc1_2025-10-29_14_54_04.624.txt  DigitRecog_Loss_96d4a26_2025-11-10_15_59_55.010.csv  DigitRecog_Loss_96d4a26_2025-11-10_15_59_55.010.txt  DigitRecog_Loss_96d4a26_2025-11-10_16_04_06.757.csv  DigitRecog_Loss_96d4a26_2025-11-10_16_04_06.757.txt  DigitRecog_Loss_96d4a26_2025-11-10_16_28_05.318.csv  DigitRecog_Loss_96d4a26_2025-11-10_16_28_05.318.txt  DigitRecog_Loss_96d4a26_2025-11-10_22_17_15.110.csv  DigitRecog_Loss_96d4a26_2025-11-10_22_17_15.110.txt  DigitRecog_Loss_96d4a26_2025-11-11_12_11_38.057.csv  DigitRecog_Loss_96d4a26_2025-11-11_12_11_38.057.txt  README.md  config.json  main.cpp  network_diagnostic.cpp  report2.ods  report3.ods  report4.ods  test_weight_init.cpp  training_loss.csv  utils.hpp  version.h  version.h.in
DigitRecognition/libs/activations/: CMakeLists.txt  activations.cpp  activations.h  main.cpp
DigitRecognition/libs/activations/tests/: test_activations.cpp
DigitRecognition/libs/config/: CMakeLists.txt  config.cpp  config.hpp
DigitRecognition/libs/images/: CMakeLists.txt  images.cpp  images.hpp
DigitRecognition/libs/images/tests/: CMakeLists.txt  test_images.cpp
DigitRecognition/libs/layers/: CMakeLists.txt  layers.cpp  layers.h
DigitRecognition/libs/layers/tests/: CMakeLists.txt  test_layer.cpp  test_layers.cpp  test_weight_init.cpp
DigitRecognition/libs/learning_rate/: learning_rate.hpp
DigitRecognition/libs/networks/: networks.hpp
DigitRecognition/libs/training/: CMakeLists.txt  training.cpp  training.hpp
DigitRecognition/libs/visualization/: CMakeLists.txt  visualization.cpp  visualization.hpp
DigitRecognition/scripts/: build.ps1  build.sh  get_mnist.py  get_mnist.sh  get_mnist_simple.py  plot_loss.py  run.ps1  run.sh  setup_env.sh  test.ps1
FL1/: AircraftPhysics.h  AircraftSpec.h  CMakeLists.txt  ConfigLoader.h  PROTOCOL.md  README.md  ROADMAP.md  Vec3.h  config.json  config_mars.json  main.cpp
FL1/apps/cli/: CMakeLists.txt  main.cpp
FL1/apps/gui/: .gitignore
FL1/apps/learn01/src/: flight_client.py  flight_nn.py
FL1/apps/learn01/tests/: test_main.py
FL1/apps/server/: CMakeLists.txt  main.cpp
FL1/examples/python/: test_client.py
FL1/lib/FlightSim/: CMakeLists.txt
FL1/lib/FlightSim/include/FlightSim/: AircraftPhysics.h  AircraftState.h  NetworkServer.h
FL1/scripts/: run.ps1  run_server.ps1
MNIST_Python/: README.md  config.json  config_arch_widest_1.json  experiment_results_20251120_105326.csv  main.py  plotting.py  run_experiments.py
apps/gui/: README.md  requirements.txt
apps/gui/src/: __init__.py  main.py
apps/gui/tests/: test_main.py
apps/learn01/: README.md  requirements.txt
apps/learn01/src/: __init__.py  main.py
examples/powershell/: test_client.ps1
lib/FlightSim/include/FlightSim/: ConfigLoader.h  Planet.h
scripts/: build.ps1  run.ps1
